force-app/main/default/objects/Territory_Insight__c/Territory_Insight__c.object-meta.xml
<CustomObject>
    <description>Stores daily AI-generated territory insights produced by the C4 Reflection Territory Insights agent. Each record holds the synthesised narrative output of one reflection run for one territory.</description>
    <label>Territory Insight</label>
    <nameField>
        <label>Territory Insight Name</label>
        <type>AutoNumber</type>
        <displayFormat>TI-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Territory Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>