force-app/main/default/objects/Territory_Insight__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Indicates whether the critic subagent approved the insights or the maximum iteration count was reached.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Max Iterations Reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>