force-app/main/default/objects/Territory_Insight__c/fields/Competitive_Insights__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Insights__c</fullName>
    <description>Synthesised narrative summary of identified competitor activity and recommended response.</description>
    <label>Competitive Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>