force-app/main/default/objects/Territory_Insight__c/fields/Cycle_Plan_Insights__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Plan_Insights__c</fullName>
    <description>Synthesised narrative assessment of cycle plan progress, pace risk, and rep-level observations.</description>
    <label>Cycle Plan Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>