force-app/main/default/objects/Territory_Insight__c/fields/Iteration_Count__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Count__c</fullName>
    <description>Number of generator-critic reflection iterations completed before the insights were stored.</description>
    <label>Iteration Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>