force-app/main/default/objects/Territory_Insight__c/fields/Market_Share_Insights__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_Insights__c</fullName>
    <description>Synthesised narrative interpretation of product share trends and what they signal for rep focus.</description>
    <label>Market Share Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>