force-app/main/default/objects/Territory_Insight__c/fields/Performance_Summary__c.field-meta.xml
<CustomField>
    <fullName>Performance_Summary__c</fullName>
    <description>Synthesised narrative overview of territory performance vs target, including attainment percentage and growth vs prior period.</description>
    <label>Performance Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>