force-app/main/default/objects/Territory_Insight__c/fields/Recommended_Focus_Areas__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Focus_Areas__c</fullName>
    <description>Prioritised narrative list of concrete actions for the territory manager, each assigned to a named rep with a suggested timeframe.</description>
    <label>Recommended Focus Areas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>