force-app/main/default/objects/Territory_Insight__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>Date the insights were generated.</description>
    <label>Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>