force-app/main/default/objects/Territory_Insight__c/fields/Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Id__c</fullName>
    <description>Salesforce Territory2 record Id for which this insight was generated.</description>
    <label>Territory Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>